feat: New skills page with new information and an improved form.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="logo">
             <img src="./assets/logonav.png" alt="logo">
-            <a href="https://github.com/DenilsoferreiraL" target="_blank">Desenvolvedor Front-End Júnior </a>
+            <a href="https://github.com/DenilsoferreiraL" target="_blank"> Developer Front-End </a>
         </div>
         <ul>
             <li><a href="#main">Home</a></li>
@@ -26,12 +26,59 @@
         </ul>
         <button>Contact Me</button>
         <button id="menuButton" onclick="openMenu()">
-            <i class='bx bx-menu-alt-right'></i>
+            <i class='bx bx-menu'></i>
         </button>
     </nav>
-    <main>
 
-    </main>
+    <div class="main" id="main">
+        <div class="left">
+            <h5>Hey, I am Denilso 👋 </h5>
+            <h3>Developer Front-end <span>Creating Digital Experiences</span>.</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veritatis non odio possimus quidem
+                mollitia eos? Officia tempore, optio, magni maiores repudiandae, ea nesciunt sint fugiat quis ipsum
+                voluptates quia. a decidir
+            </p>
+            <button>Get In Touch</button>
+        </div>
+        <div class="right">
+            <img src="./assets/person.png" alt="person">
+        </div>
+    </div>
+    <div class="skills" id="skills">
+        <h5>My Skills</h5>
+        <h3>My expertise</h3>
+        <div class="skill-items">
+            <div class="item">
+                <div class="icon"><i class='bx bx-directions'></i></div>
+                <h4>Strategy & Direction</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatem nobis facilis vel
+                    aspernatur, quo cupiditate architecto possimus quasi illo tempore provident asperiores sunt nulla
+                    laborum quidem consequuntur itaque facere.</p>
+            </div>
+            <div class="item">
+                <div class="icon"><i class='bx bx-bookmark-heart'></i></div>
+                <h4>Branding & logo</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatem nobis facilis vel
+                    aspernatur, quo cupiditate architecto possimus quasi illo tempore provident asperiores sunt nulla
+                    laborum quidem consequuntur itaque facere.</p>
+            </div>
+            <div class="item">
+                <div class="icon"><i class='bx bxl-figma'></i></i></div>
+                <h4>Ui & UX Design</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatem nobis facilis vel
+                    aspernatur, quo cupiditate architecto possimus quasi illo tempore provident asperiores sunt nulla
+                    laborum quidem consequuntur itaque facere.</p>
+            </div>
+            <div class="item">
+                <div class="icon"><i class='bx bx-code-alt'></i></div>
+                <h4>Webflow Coding</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatem nobis facilis vel
+                    aspernatur, quo cupiditate architecto possimus quasi illo tempore provident asperiores sunt nulla
+                    laborum quidem consequuntur itaque facere.</p>
+            </div>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 
