feat: about me create

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="main" id="main">
         <div class="left">
             <h5>Hey, I am Denilso 👋 </h5>
-            <h3>Developer Front-end <span>Creating Digital Experiences</span>.</h3>
+            <h3>Developer Front-end <span>Creating Digital Experiences</span></h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veritatis non odio possimus quidem
                 mollitia eos? Officia tempore, optio, magni maiores repudiandae, ea nesciunt sint fugiat quis ipsum
@@ -42,7 +42,7 @@
             <button>Get In Touch</button>
         </div>
         <div class="right">
-            <img src="./assets/person.png" alt="person">
+            <img src="./assets/header.png" alt="img">
         </div>
     </div>
     <div class="skills" id="skills">
@@ -77,6 +77,20 @@
                     aspernatur, quo cupiditate architecto possimus quasi illo tempore provident asperiores sunt nulla
                     laborum quidem consequuntur itaque facere.</p>
             </div>
+        </div>
+    </div>
+    <div class="about">
+        <div class="left">
+            <img src="./assets/person.png" alt="person">
+        </div>
+        <div class="right">
+            <h5>About</h5>
+            <h3>About Me</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga, libero sint cumque unde vel
+                possimus culpa eum dolore at, vitae magni tempora quos temporibus neque perferendis commodi quibusdam
+                in!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta quo iusto dignissimos perspiciatis, odio
+                sapiente esse cum quidem atque error expedita a unde impedit natus odit nostrum, ad ut autem.</p>
         </div>
     </div>
     <script src="./script.js"></script>
