feat: page portfolio create

--- a/index.html
+++ b/index.html
@@ -93,6 +93,28 @@
                 sapiente esse cum quidem atque error expedita a unde impedit natus odit nostrum, ad ut autem.</p>
         </div>
     </div>
+
+    <div class="portfolio" id="portfolio"></div>
+    <div class="header">
+        <div class="info">
+            <h5>Recent Projects</h5>
+            <h3>My Portfolio</h3>
+        </div>
+        <button><i class='bx bxl-github'></i>Visit My GitHub</button>
+    </div>
+
+    <div class="portfo-items">
+        <div class="item">
+            <img src="./assets/Web-site1.PNG">
+            <h4>Portfolio #3</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis dolorum dolores
+                velit quod voluptatum, saepe officia ut officiis libero in vitae, facere explicabo similique suscipit at
+                maiores.</p>
+            <a href="https://portfoliocriativo.netlify.app/" target="_blank"><i class='bx bx-link-external'></i>View
+                here!</a>
+        </div>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 
