--- a/index.html
+++ b/index.html
@@ -94,25 +94,60 @@
         </div>
     </div>
 
-    <div class="portfolio" id="portfolio"></div>
-    <div class="header">
-        <div class="info">
-            <h5>Recent Projects</h5>
-            <h3>My Portfolio</h3>
+    <div class="portfolio" id="portfolio">
+        <div class="header">
+            <div class="info">
+                <h5>Recent Projects</h5>
+                <h3>My Portfolio</h3>
+            </div>
+            <button><i class='bx bxl-github'></i>Visit My GitHub</button>
         </div>
-        <button><i class='bx bxl-github'></i>Visit My GitHub</button>
+
+        <div class="portfo-items">
+            <div class="item">
+                <img src="./assets/web-site1.PNG">
+                <div class="info">
+                    <h4>site #1</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis dolorum
+                        dolores
+                        velit quod voluptatum, saepe officia ut officiis libero in vitae, facere explicabo similique
+                        suscipit at
+                        maiores.</p>
+                    <a href="https://portfoliocriativo.netlify.app/" target="_blank">Click here! <i
+                            class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/web-site2.PNG">
+                <div class="info">
+                    <h4>site #2</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis dolorum
+                        dolores
+                        velit quod voluptatum, saepe officia ut officiis libero in vitae, facere explicabo similique
+                        suscipit at
+                        maiores.</p>
+                    <a href="https://acessoseguro.netlify.app/" target="_blank">Click here! <i
+                            class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="./assets/web-site3.PNG">
+                <div class="info">
+                    <h4>site #3</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis dolorum
+                        dolores
+                        velit quod voluptatum, saepe officia ut officiis libero in vitae, facere explicabo similique
+                        suscipit at
+                        maiores.</p>
+                    <a href="#" target="_blank">Click here! <i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="portfo-items">
-        <div class="item">
-            <img src="./assets/Web-site1.PNG">
-            <h4>Portfolio #3</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis dolorum dolores
-                velit quod voluptatum, saepe officia ut officiis libero in vitae, facere explicabo similique suscipit at
-                maiores.</p>
-            <a href="https://portfoliocriativo.netlify.app/" target="_blank"><i class='bx bx-link-external'></i>View
-                here!</a>
-        </div>
+    <div class="feedback" id="feedback">
+        <h5>CLients Reviews</h5>
+        <h3>Customers Fessback</h3>
     </div>
 
     <script src="./script.js"></script>
