--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <nav>
         <div class="logo">
-            <img src="./assets/logonav.png" alt="logo">
+            <img src="./assets/logo-white.svg" alt="logo">
             <a href="https://github.com/DenilsoferreiraL" target="_blank"> Developer Front-End Jr. </a>
         </div>
         <ul>
-            <li><a href="#main">Home</a></li>
+            <li translate="no"><a href="#main">Home</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#about">Aboute Me</a></li>
             <li><a href="#portfolio">Portfólio</a></li>
@@ -47,7 +47,7 @@
     </div>
     <div class="skills" id="skills">
         <h3>Skills</h3>
-        <div class="skill"  translate="no">
+        <div class="skill" translate="no">
             <p><i class='bx bxl-html5'></i>HTML</p>
             <p><i class='bx bxl-css3'></i>CSS</p>
             <p><i class='bx bxl-javascript'></i>JavaScript</p>
@@ -111,7 +111,7 @@
 
         <div class="portfo-items">
             <div class="item">
-                <img src="./assets/web-site1.PNG">
+                <img href="https://portfoliocriativo.netlify.app/" src="./assets/web-site1.PNG">
                 <div class="info">
                     <h4>site #1</h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis dolorum
@@ -150,10 +150,30 @@
             </div>
         </div>
     </div>
-    <div class="contact">
-        <h3>Contact</h3>
+    <footer>
+        <div class="footer">
+            <div class="logo">
+                <img src="./assets/logonav.png" alt="logo">
+                <a href="#">Denilso Ferreira Leite</a>
 
-    </div>
+                <div class="social-links">
+                    <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-whatsapp'></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="separator"></div>
+        <div class="bottom">
+            <p>Agradeço a atenção ❤️ </p>
+            <div class="links">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Cookies Setting</a>
+            </div>
+        </div>
+    </footer>
 
     <script src="./script.js"></script>
 </body>
