style: changing logo and favicon

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <footer>
         <div class="footer">
             <div class="logo">
-                <img src="./assets/logonav.png" alt="logo">
+                <img src="./assets/logo-white.svg" alt="logo">
                 <a href="#">Denilso Ferreira Leite</a>
 
                 <div class="social-links">
