style: Added responsive design for desktop, iPad and mobile devices.

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 
     <div class="main" id="main">
         <div class="left">
-            <h5>Hey, I am Denilso 👋 </h5>
+            <h5>Olá, sou Denilso 👋 </h5>
             <h3><span>Creating Digital Experiences</span></h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veritatis non odio possimus quidem
                 mollitia eos? Officia tempore, optio, magni maiores repudiandae, ea nesciunt sint fugiat quis ipsum
                 voluptates quia. a decidir
             </p>
-            <button>Get In Touch</button>
+            <button>Learn More</button>
         </div>
         <div class="right">
-            <img src="./assets/header.png" alt="img">
+            <img src="./assets//header.svg" alt="img">
         </div>
     </div>
     <div class="skills" id="skills">
@@ -78,10 +78,10 @@
             <div class="item">
                 <div class="icon"><i class='bx bx-filter-alt'></i></div>
                 <h4>SEO Knowledge</h4>
-                <p>I understand search engine optimization (SEO) practices to improve a website's visibility and organic
-                    ranking. I implement strategies to improve content relevance, site structure, appropriate use of
-                    keywords and technical optimizations. This results in a stronger online presence and better
-                    positioning in search results.</p>
+                <p>I have search engine optimization (SEO) practices to improve a website's visibility and organic
+                    ranking. I use strategies to improve content relevance, site structure, appropriate use of keywords
+                    and technical optimizations. This results in a stronger online presence and better positioning in
+                    search results.</p>
             </div>
         </div>
     </div>
@@ -90,7 +90,6 @@
             <img src="./assets/person.png" alt="person">
         </div>
         <div class="right">
-            <h5>About</h5>
             <h3>About Me</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga, libero sint cumque unde vel
                 possimus culpa eum dolore at, vitae magni tempora quos temporibus neque perferendis commodi quibusdam
@@ -106,7 +105,8 @@
                 <h5>Recent Projects</h5>
                 <h3>My Portfolio</h3>
             </div>
-            <button><i class='bx bxl-github'></i>Visit My GitHub</button>
+            <a href="https://github.com/DenilsoferreiraL"><button><i class='bx bxl-github'></i>Visit My
+                    GitHub</button></a>
         </div>
 
         <div class="portfo-items">
@@ -154,11 +154,12 @@
         <div class="footer">
             <div class="logo">
                 <img src="./assets/logo-white.svg" alt="logo">
-                <a href="#">Denilso Ferreira Leite</a>
+                <a href="https://www.linkedin.com/in/denilso-ferreira-leite/">Denilso Ferreira Leite</a>
 
                 <div class="social-links">
-                    <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.linkedin.com/in/denilso-ferreira-leite/"><i
+                            class='bx bxl-linkedin-square'></i></a>
+                    <a href="https://github.com/DenilsoferreiraL"><i class='bx bxl-github'></i></a>
                     <a href="#"><i class='bx bxl-instagram'></i></a>
                     <a href="#"><i class='bx bxl-whatsapp'></i></a>
                 </div>
