style: Stylized main page and changing fonts

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <li><a href="#portfolio">Portfólio</a></li>
 
         </ul>
-        <button>Contact Me</button>
         <button id="menuButton" onclick="openMenu()">
             <i class='bx bx-menu'></i>
         </button>
@@ -32,18 +31,12 @@
 
     <div class="main" id="main">
         <div class="left">
-            <h5>Olá, sou Denilso 👋 </h5>
-            <h3><span>Creating Digital Experiences</span></h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit veritatis non odio possimus quidem
-                mollitia eos? Officia tempore, optio, magni maiores repudiandae, ea nesciunt sint fugiat quis ipsum
-                voluptates quia. a decidir
-            </p>
-            <button>Learn More</button>
+            <h3>Denilso Ferreira Leite</h3>
+            <h5><span>Creating Digital Experiences</span></h5>
+            
+            <a href="#about"><button>Learn More</button></a>
         </div>
-        <div class="right">
-            <img src="./assets//header.svg" alt="img">
-        </div>
+       
     </div>
     <div class="skills" id="skills">
         <h3>Skills</h3>
