--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="content flex">
-            <a href="https://drive.google.com/file/d/1ai80RUSwPZimCiSOYv_g-cqSgLUKa-W-/view?usp=sharing" target="_blank"
+            <a href="https://drive.google.com/file/d/1Evqew0_EEH5j8XNWIQdFyarwNXMbToYM/view?usp=sharing" target="_blank"
                 rel="noopener noreferrer"> <button>Curriculum</button></a>
         </div>
     </div>
@@ -77,7 +77,7 @@
                 <h4>Responsive Design</h4>
                 <p>Ability to create interfaces that adapt to different screen sizes, providing a consistent
                     experience
-                    on mobile and desktop devices.</p>
+                    on mobile and desktop devices, as you can see in this model.</p>
             </div>
             <div class="item">
                 <div class="icon"><i class='bx bx-bug'></i></div>
@@ -86,10 +86,9 @@
             </div>
             <div class="item">
                 <div class="icon"><i class='bx bx-code-alt'></i></div>
-                <h4>JavaScript</h4>
-                <p>I use JavaScript to make web pages interactive by manipulating the DOM and making asynchronous
-                    calls
-                    to APIs.</p>
+                <h4>Standards and Best Practices</h4>
+                <p>I follow coding standards and applying best practices are essential to ensure clean, sustainable and
+                    easy to maintain code.</p>
             </div>
             <div class="item">
                 <div class="icon"><i class='bx bx-filter-alt'></i></div>
@@ -109,23 +108,25 @@
         </div>
         <div class="right">
             <h3>About Me</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam fuga, libero sint cumque unde vel
-                possimus culpa eum dolore at, vitae magni tempora quos temporibus neque perferendis commodi
-                quibusdam
-                in!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta quo iusto dignissimos perspiciatis,
-                odio
-                sapiente esse cum quidem atque error expedita a unde impedit natus odit nostrum, ad ut autem.</p>
+            <p> Denilso Ferreira Leite, 23 years old, freelance web developer. Specialized in creating minimalist and
+                visually appealing websites, with an emphasis on trust and security in projects. The autonomy of
+                freelancing has extraordinarily strengthened my practice, while the constant flexibility drives my daily
+                practice. I highlight my exceptional ability to collaborate efficiently as a team, meeting demands
+                together.</p>
+
+            <p> In my career, I faced and overcame challenges with dedication and passion for what I do. I am fully
+                available to embrace future challenges and add even more experience to my journey. Committed to
+                excellence, I continue to look for opportunities to advance my career.</p>
         </div>
     </div>
 
     <div class="portfolio" id="portfolio">
         <div class="header">
             <div class="info">
-                <h3>Recent Projects</h3>
-                <h3>My Portfolio</h3>
+                <h3>Portfólio</h3>
+                <h5>Recent Projects</h5>
             </div>
-            <a href="https://github.com/DenilsoferreiraL"><button><i class='bx bxl-github'></i>Visit My
+            <a target="_blank" href="https://github.com/DenilsoferreiraL"><button><i class='bx bxl-github'></i>Visit My
                     GitHub</button></a>
         </div>
 
@@ -133,32 +134,28 @@
             <div class="item">
                 <img href="https://portfoliocriativo.netlify.app/" src="./assets/web-site1.PNG">
                 <div class="info">
-                    <h4>site #1</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis
-                        dolorum
-                        dolores
-                        velit quod voluptatum, saepe officia ut officiis libero in vitae, facere explicabo similique
-                        suscipit at
-                        maiores.</p>
-                    <a href="https://portfoliocriativo.netlify.app/" target="_blank">Click here! <i
+                    <h4>Portfólio PRO</h4>
+                    <p>Page that is under development, focuses on delivering the best simplified and professional
+                        experience for portfolio creation, highlighting your skills in a practical and interactive way.
+                        Designed for professionals who want to make an excellent first impression, the platform offers
+                        several facilities to create an attractive portfolio.</p>
+                    <a href="https://portfoliopr0.netlify.app/" target="_blank">Click here! <i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="item">
                 <img src="./assets/web-site2.PNG">
                 <div class="info">
-                    <h4>site #2</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus atque, corporis
-                        dolorum
-                        dolores
-                        velit quod voluptatum, saepe officia ut officiis libero in vitae, facere explicabo similique
-                        suscipit at
-                        maiores.</p>
-                    <a href="https://acessoseguro.netlify.app/" target="_blank">Click here! <i
+                    <h4 translate="no">Secure Access</h4>
+                    <p>Welcome to Secure Access - where logging in becomes an experience! This example page highlights
+                        attractive and secure aesthetics with different login methods. This copy shows my clients that I
+                        want something different. It's not just about logging in, it's about connecting in style and
+                        security.</p>
+                    <a href="https://secureacccess.netlify.app/" target="_blank">Click here! <i
                             class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <img src="./assets/web-site3.PNG">
                 <div class="info">
                     <h4>site #3</h4>
@@ -169,7 +166,7 @@
                         suscipit at
                         maiores.</p>
                     <a href="#" target="_blank">Click here! <i class='bx bx-link-external'></i></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -177,14 +174,17 @@
         <div class="footer">
             <div class="logo">
                 <img src="./assets/logo-black.svg" alt="logo">
-                <a href="https://www.linkedin.com/in/denilso-ferreira-leite/">Denilso Ferreira Leite</a>
+                <a target="_blank" href="https://www.linkedin.com/in/denilso-ferreira-leite/">Denilso Ferreira Leite</a>
 
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/denilso-ferreira-leite/"><i
+                    <a target="_blank" href="https://www.linkedin.com/in/denilso-ferreira-leite/"><i
                             class='bx bxl-linkedin-square'></i></a>
-                    <a href="https://github.com/DenilsoferreiraL"><i class='bx bxl-github'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-whatsapp'></i></a>
+                    <a target="_blank" href="https://github.com/DenilsoferreiraL"><i class='bx bxl-github'></i></a>
+                    <a target="_blank" href="https://www.instagram.com/deni_ferreira_/"><i
+                            class='bx bxl-instagram'></i></a>
+                    <a target="_blank"
+                        href="https://api.whatsapp.com/send?phone=5563992922509&text=Ol%C3%A1,%20tudo%20bem?%20"><i
+                            class='bx bxl-whatsapp'></i></a>
                 </div>
             </div>
         </div>
@@ -192,9 +192,8 @@
         <div class="bottom">
             <p>Agradeço a atenção ❤️ </p>
             <div class="links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Cookies Setting</a>
+                <a href="#header">Topo<i class='bx bxs-to-top'></i></a>
+
             </div>
         </div>
     </footer>
