style: paragraph and icon size

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                 <div class="info">
                     <h4 translate="no">Secure Access</h4>
                     <p>Welcome to Secure Access - where logging in becomes an experience! This example page highlights
-                        attractive and secure aesthetics with different login methods. This copy shows my clients that I
-                        want something different. It's not just about logging in, it's about connecting in style and
-                        security.</p>
+                        an attractive and secure aesthetic with different login methods. This example shows my clients
+                        what I can do differently. It's not just about logging in, it's about connecting with style and
+                        security..</p>
                     <a href="https://secureacccess.netlify.app/" target="_blank">Click here! <i
                             class='bx bx-link-external'></i></a>
                 </div>
@@ -167,8 +167,8 @@
                         maiores.</p>
                     <a href="#" target="_blank">Click here! <i class='bx bx-link-external'></i></a>
                 </div> -->
-            </div>
         </div>
+    </div>
     </div>
     <footer>
         <div class="footer">
