style: changing browser height size and font size

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <p><i class='bx bxl-html5'></i><span>HTML</span></p>
             <p><i class='bx bxl-css3'></i><span>CSS</span></p>
             <p><i class='bx bxl-javascript'></i><span>JavaScript</span></p>
+            <p><i class='bx bxl-git'></i><span>Git</span></p>
             <p><i class='bx bxl-nodejs'></i><span>Node.js</span></p>
             <p><i class='bx bxl-react'></i><span>React.js</span></p>
             <p><i class='bx bxl-docker'></i><span>Docker</span></p>
@@ -73,16 +74,18 @@
         <h3>My Expertise</h3>
         <div class="skill-items">
             <div class="item">
+                <div class="icon"> <i class='bx bx-git-pull-request'></i></i></div>
+                <h4>Version control</h4>
+                <p>Proficient in Git for version control, ensuring efficient tracking and effective collaboration on
+                    projects. Recognized for his ability to promote a collaborative work culture, essential for the
+                    group's success.</p>
+            </div>
+            <div class="item">
                 <div class="icon"><i class='bx bx-desktop'></i></div>
                 <h4>Responsive Design</h4>
                 <p>Ability to create interfaces that adapt to different screen sizes, providing a consistent
                     experience
                     on mobile and desktop devices, as you can see in this model.</p>
-            </div>
-            <div class="item">
-                <div class="icon"><i class='bx bx-bug'></i></div>
-                <h4>Testing and Debugging</h4>
-                <p>Ability to test and debug code to ensure the quality of the final product.</p>
             </div>
             <div class="item">
                 <div class="icon"><i class='bx bx-code-alt'></i></div>
@@ -93,12 +96,13 @@
             <div class="item">
                 <div class="icon"><i class='bx bx-filter-alt'></i></div>
                 <h4>SEO Knowledge</h4>
-                <p>I have search engine optimization (SEO) practices to improve a website's visibility and organic
-                    ranking. I use strategies to improve content relevance, site structure, appropriate use of
-                    keywords
-                    and technical optimizations. This results in a stronger online presence and better positioning
-                    in
-                    search results.</p>
+                <p>I have search engine optimization (SEO) practices, improving the visibility and organic ranking of a
+                    website. I use strategies to improve the relevance of content.</p>
+            </div>
+            <div class="item">
+                <div class="icon"><i class='bx bx-bug'></i></div>
+                <h4>Testing and Debugging</h4>
+                <p>Ability to test and debug code to ensure the quality of the final product.</p>
             </div>
         </div>
     </div>
