style: updating the media

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -72,7 +72,7 @@
         <h3>My Expertise</h3>
         <div class="skill-items">
             <div class="item">
-                <div class="icon"> <i class='bx bx-git-pull-request'></i></i></div>
+                <div class="icon"> <i class='bx bx-git-pull-request'></i></div>
                 <h4>Version control</h4>
                 <p>Proficient in Git for version control, ensuring efficient tracking and effective collaboration on
                     projects. Recognized for his ability to promote a collaborative work culture, essential for the
@@ -194,8 +194,8 @@
             </div>
         </div>
     </footer>
-
-    <script src="./script.js"></script>
 </body>
+<script src="./script.js"></script>
+
 
 </html>
