style: updated style.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="header" id="header">
 
         <div class="inner-header flex">
-            <h3>Hi, I'm Denilso, Web Developer</h3>
+            <h3 translate="no">Hi, I'm Denilso, Web Developer</h3>
             <h5>Creating Digital Experiences</h5>
         </div>
 
